# Discrete_Math_Qt

./: CMakeLists.txt  CourseGraph.cpp  CourseGraph.h  FinaltermProject_Template.docx  main.cpp
